--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^4.17.2
   window_manager: ^0.3.8
   bloc: ^8.1.4
+  device_preview: ^1.1.0
 
 dev_dependencies:
   flutter_test:
